--- a/src/style.css
+++ b/src/style.css
@@ -23,12 +23,20 @@ img {
 .button-container {
   text-align: center;
 }
+.coded-by {
+  font-size: 14px;
+  font-family: monospace;
+}
+
 .current-temperature {
   color: #757575;
+  margin-right: 10px;
+  padding-left: 10px;
 }
 
 .current-weather-icon-temp {
   text-align: right;
+  margin-right: 20px;
 }
 
 .current-weather-image i {
@@ -50,6 +58,10 @@ img {
   display: block;
   margin: 0 auto;
   color: #b2dfdb;
+}
+
+.open-source-link {
+  color: #0a58ca;
 }
 
 .search-card {
