--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,19 @@ img {
   /* display: block;
   margin: 0 auto; */
 }
+li {
+  display: inline;
+  padding-right: 5px;
+  text-align: center;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0px;
+  display: inline;
+  text-align: center;
+}
+
 .button-container {
   text-align: center;
 }
